testsuite/tests/generic_interfaces/implements_non_gen_iface/test.out
== foo.lkt ==
foo.lkt:10:35: error: generic interface expected, got the builtin type Bool
10 | class BarNode: FooNode implements Bool {
   |                                   ^^^^


lkt_compile: Done
